2014-09-15 Marco Giammarini <m.giammarini@warcomeb.it>

    * Iniziata l'implementazione del dialog dell'activity.

2014-09-12 Marco Giammarini <m.giammarini@warcomeb.it>

    * Iniziata l'implementazione delle classi riguardanti la gestione delle attivita'.
    In particolare e' stato aggiunto il campo priority.

2014-08-29 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimata l'implementazione del motore di ricerca dei dipendenti. E' possibile
    considerare la parte dei dipendenti ultimata a meno di modifiche o bug.

2014-08-27 Marco Giammarini <m.giammarini@warcomeb.it>

    * Disegnato gli strumenti per la ricerca degli employee. Iniziata anche l'implementazione.

2014-08-26 Marco Giammarini <m.giammarini@warcomeb.it>

    * Alcuni fix per l'edit dell'employee dialog.

2014-08-25 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la funzione per il riempimento dell'employee dialog per il view e per l'edit.

2014-08-22 Marco Giammarini <m.giammarini@warcomeb.it>

    * Implementato la funzione getEmployee() nel wrapper del database.

    * Aggiunte funzioni per il setting degli enum nella classe Employee da stringa.

2014-08-21 Marco Giammarini <m.giammarini@warcomeb.it>

    * Implementato il riconoscimento del dipendente selezionato sulla tabella.

2014-08-11 Marco Giammarini <m.giammarini@warcomeb.it>

    * Implementata la ricerca con paramentri all'interno del database.

2014-08-10 Marco Giammarini <m.giammarini@warcomeb.it>

    * Implementata la funzione AddEmployee all'interno del wrapper per il DB.