@@ -1,3 +1,7 @@
+2014-09-23 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Aggiunta la funzione addActivity() nel wrapper del database.
+
 2014-09-15 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Iniziata l'implementazione del dialog dell'activity.
